@@ -1,5 +1,9 @@
 2002-01-23  Miguel de Icaza  <miguel@ximian.com>
 
+	* wrapper.c: Changed things so that we can propagate ERRNO back. 
+
+	Include stdio.h and unistd.h to remove a couple of warnings.
+
 	* genwrapper.pl: Added support for flagging non-CLS compliant
 	classes and structs with CLSCompliant(false).
 
